Milestone and award cleanup.

--- a/src/locales/de/ui.json
+++ b/src/locales/de/ui.json
@@ -167,7 +167,7 @@
     "Have at least 3 NEGATIVE VPs among your cards. (Event cards count.)": "Benötigt mindestens 3 NEGATIVE SPs auf deinen Karten. (Ereigniskarten zählen.)",
     "Purifier": "Reiniger",
     "Have removed at least 3 hazard tiles (excluding WGT)": "Mindestens 3 Gefahrenplättchen entfernt haben (außer WGT)",
-    "Breeder": "Züchter",
+    "Farmer": "Züchter",
     "Have 5 animal and microbe resources on your cards": "Benötigt mindestens 5 Tier- und/oder Mikrobenressourcen auf eigenen Karten.",
     "Fundraiser": "Fondmanager",
     "Have 12 M€ production": "Benötigt eine M€-Produktion von 12 oder mehr.",
@@ -191,7 +191,7 @@
     "Have 3 cards that have cost of 20 M€ or more": "Benötigt 3 oder mehr ausgespielten Karten mit 20 M€ Mindestwert.",
     "Thawer": "Erwärmer",
     "Have raised the temperature 5 steps.": "Benötigt 5 oder mehr eigene Schritte auf der Temperaturskala",
-    "Thermoengineer": "Thermotechniker ",
+    "Engineer": "Thermotechniker ",
     "Have a total of 10 energy and heat production": "Benötigt eine Energie- und/oder Wärme-Produktion in Summe von 10 oder mehr.",
     "Briber": "Bestecher",
     "To get this milestone, pay 12 M€ in addition to the normal claim cost of 8 M€ (so, 20 M€ in total).": "Es müssen 12 M€ zusätzlich zu den normalen Antragskosten von 8 M€ gezahlt (also insgesamt 20 M€).",
