--- a/src/locales/hu/pathfinder_cards.json
+++ b/src/locales/hu/pathfinder_cards.json
@@ -115,8 +115,8 @@
   "Orbital Laboratories": "Orbitális labor",
   "(Increase your plant production 2 steps. Gain 1 plant.)": "Növeld a palántatermelésed 2 értékkel! Kapsz 1 TR-t.",
   "Oumuamua Type Object Survey": "Oumuamua típusú objektum felmérés",
-  "Draw 2 cards face up. If the first has a science or microbe tag, play it outright ignoring requirements and cost. If not, and it has a space tag, gain 3 energy prod. If it has none of those, apply the check to the second card.": "Fedj fel 2 kártyát! Ha az első rendelkezik tudomány vagy mikroba ikonnal, játszd ki figyelmen kívül hagyva a kijátszási feltételeit és költségét! Ha nem rendelkezik, de van űrikon, kapsz 3 energiatermelést. Ha egyik sincs rajta, ismételd meg a második kártyával!",
-  "(Requires 1 space tag and 1 science tag. Add 2 data to ANY card. )": "Kijátszási feltétel: legalább 1 űr- és 1 tudomány ikon. Rakj 2 adatot BÁRMILYEN kártyára!",
+  "Draw 2 cards face up. If the first has a science or microbe tag (and is playable), play it outright, ignoring requirements and cost. If not, and it has a space tag, gain 3 energy prod. Otherwise, apply the check to the second card.": "Fedj fel 2 kártyát! Ha az első rendelkezik tudomány vagy mikroba ikonnal, játszd ki figyelmen kívül hagyva a kijátszási feltételeit és költségét! Ha nem rendelkezik, de van űrikon, kapsz 3 energiatermelést. Ha egyik sincs rajta, ismételd meg a második kártyával!",
+  "(Requires 1 space tag and 1 science tag. Add 2 data to ANY card.)": "Kijátszási feltétel: legalább 1 űr- és 1 tudomány ikon. Rakj 2 adatot BÁRMILYEN kártyára!",
   "play ": "Kijátszás",
   "Ozone Generators": "Ózon generátorok",
   "(Action: Spend 3 energy to gain 1 TR.)": "Akció: Költs el 3 energiát, hogy kapj 1 TR-t!",
