--- a/src/locales/de/moon_cards.json
+++ b/src/locales/de/moon_cards.json
@@ -204,7 +204,7 @@
   "Mooncrate Block Factory": "Mondkrater-Blockfabrik",
   "Lunar standard projects": "Lunar-Standard-Projekte",
   "Effect: When you pay for a Lunar standard project, you spend 4M€ less.": "EFFEKT: Wenn du für ein Lunar-Standardprojekt bezahlst, bezahlst du 4 M€ weniger.",
-  "Requires 1 mine on The Moon.": "Benötigt 1 eigenes Minenplättchen.",
+  "Requires 1 mine on The Moon.": "Benötigt 1 Minenplättchen auf dem Mond.",
 
   "Mooncrate Convoys To Mars": "Mondkratenkonvois zum Mars",
   "Requires that Mars First are ruling or that you have 2 delegates there. Raise the logistic rate 1 step. All players may sell their steel resources for 3M€ each.": "Benötigt Regierungspartei: MARS FIRST oder 2+ eigene Delegierte dort. Erhöhe die Logistikwertung um 1. Alle Spieler können ihre Stahlressourcen für je 3 M€ verkaufen.",
