Rename City Park to City Parks (#7261)

--- a/src/locales/cn/promo_cards.json
+++ b/src/locales/cn/promo_cards.json
@@ -39,7 +39,7 @@
   "Casinos": "赌场",
   "Requires that you have a city. Decrease your energy production 1 step and increase your M€ production 4 steps.": "需要你拥有1座城市。降低1点电力产能，提升4点M€产能。",
 
-  "City Park": "城市公园",
+  "City Parks": "城市公园",
   "Requires that you have 3 cities. Gain 2 plants.": "需要你拥有3座城市。获得2个植物。",
 
   "Comet Aiming": "彗星瞄准",
