--- a/src/locales/hu/promo_cards.json
+++ b/src/locales/hu/promo_cards.json
@@ -9,7 +9,7 @@
   "Decrease your energy production 1 step.": "Csökkentsd az energiatermelésed 1 értékkel!",
   "Supermarkets": "Szupermarketek",
   "Requires two cities in play. Increase your M€ production 2 steps.": "Kijátszási feltétel: Legalább 2 Városlapka. Növeld a M€-termelésed 2 értékkel!",
-  "City Park": "Városliget",
+  "City Parks": "Városliget",
   "Requires that you have 3 cities. Gain 2 plants.": "Kijátszási feltétel: legalább 3 Városlapka. Kapsz 3 palántát.",
   "Soil Enrichment": "Talajdúsítás",
   "Spend 1 microbe from ANY of your cards to gain 5 plants": "Költs el 1 mikrobát BÁRMELYIK kártyádról, hogy kapj 5 palántát.",
