--- a/src/locales/jp/promo_cards.json
+++ b/src/locales/jp/promo_cards.json
@@ -2,7 +2,7 @@
   "Supermarkets": "スーパーマーケット",
   "Requires two cities in play. Increase your M€ production 2 steps.": "条件：都市2つ以上. MC産出+2.",
 
-  "City Park": "都市公園",
+  "City Parks": "都市公園",
   "Requires that you have 3 cities. Gain 2 plants.": "条件：都市3つ以上所持. 2植物獲得.",
 
   "Soil Enrichment": "土壌強化",
