--- a/src/locales/ua/promo_cards.json
+++ b/src/locales/ua/promo_cards.json
@@ -1,5 +1,5 @@
 {
-  "City Park": "Стадіон",
+  "City Parks": "Стадіон",
   "Requires that you have 3 cities. Gain 2 plants.": "Вимагає наявності 3 міст. Отримайте 2 рослини.",
 
   "Soil Enrichment": "Збагачення грунту",
