--- a/src/locales/de/promo_cards.json
+++ b/src/locales/de/promo_cards.json
@@ -13,7 +13,7 @@
   "Supermarkets": "Supermarkt",
   "Requires two cities in play. Increase your M€ production 2 steps.": "Benötigt 2 Städte im Spiel. Erhöhe deine M€-Produktion um 2.",
 
-  "City Park": "Stadtpark",
+  "City Parks": "Stadtpark",
   "Requires that you have 3 cities. Gain 2 plants.": "Benötigt 3 eigene Stadtplättchen. Erhalte 2 Pflanzen.",
 
   "Soil Enrichment": "Anreicherung der Böden",
