--- a/src/locales/de/ui.json
+++ b/src/locales/de/ui.json
@@ -145,6 +145,8 @@
     "Have a total of 7 steel and titanium production": "Benötigt eine Stahl- und/oder Titan-Produktion in Summe von 7 oder mehr.",
     "Spacefarer": "Weltraumforscher",
     "Have 6 space tags in play": "Benötigt mindestens 6 eigene Weltraum-Symbole im Spiel.",
+    "V. Spacefarer": "Weltraumforscher",
+    "Have 4 space tags in play": "Benötigt mindestens 4 eigene Weltraum-Symbole im Spiel.",
     "Specialist": "Spezialist",
     "Have 10 in production of any resource": "Eine Produktionsart mit Wert 10.",
     "Tactician": "Taktiker",
@@ -167,6 +169,8 @@
     "Have at least 3 NEGATIVE VPs among your cards. (Event cards count.)": "Benötigt mindestens 3 NEGATIVE SPs auf deinen Karten. (Ereigniskarten zählen.)",
     "Purifier": "Reiniger",
     "Have removed at least 3 hazard tiles (excluding WGT)": "Mindestens 3 Gefahrenplättchen entfernt haben (außer WGT)",
+    "Agronomist": "Agronom",
+    "Have 4 plant tags in play": "Benötigt mindestens 4 eigene Pflanzensymbole im Spiel.",    
     "Farmer": "Züchter",
     "Have 5 animal and microbe resources on your cards": "Benötigt mindestens 5 Tier- und/oder Mikrobenressourcen auf eigenen Karten.",
     "Fundraiser": "Fondmanager",
@@ -525,6 +529,7 @@
     "You cannot pay for this card": "Du kannst diese Karte nicht bezahlen",
     "You cannot afford any cards": "Du kannst dir keine Karten leisten",
     "Select card(s) to buy": "Wähle zu kaufende Karten",
+    "Select up to 1 card(s) to buy": "Wähle bis zu 1 kaufende Karte",
     "Select up to 4 card(s) to buy": "Wähle bis zu 4 kaufende Karten",
     "Select up to 2 events to return to your hand": "Wähle bis zu 2 Ereignisse um diese auf die Hand zu nehmen",
     "Place a greenery tile and raise the oxygen 1 step": "Platziere ein Grünflächen-Plättchen und erhöhe den Sauerstoffgehalt um 1%",
@@ -604,10 +609,12 @@
     "Starting Megacredits:": "Startkapital:",
     "After Preludes:": "Nach Präludium:",
 
+    "resources": "Resource(n)",
     "Select card to add resource": "Wähle eine Karte um Ressource hinzuzufügen",
     "Select card to add 1 resource": "Wähle eine Karte um 1 Ressource hinzuzufügen",
     "Select card to add 1 resources": "Wähle eine Karte um 1 Ressource hinzuzufügen",
     "Select card to add 2 resources": "Wähle eine Karte um 2 Ressourcen hinzuzufügen",
+    "Select card to add ${0} resources": "Wähle eine Karte um ${0} Ressource(n) hinzuzufügen",
     "Select card to add 1 resources(s)": "Wähle eine Karte um 1 Ressource hinzuzufügen",
     "Select card to add 2 resources(s)": "Wähle eine Karte um 2 Ressourcen hinzuzufügen",
     "Select card to add ${0} Microbe(s)": "Wähle eine Karte um ${0} Mikroben hinzuzufügen",
@@ -728,6 +735,7 @@
     "Select card to remove 1 Microbe(s)": "Wähle eine Karte um 1 Mikrobe zu entfernen",
     "Select card to remove 1 microbe from": "Wähle eine Karte um 1 Mikrobe zu entfernen",
     "Select card to remove 1 Floater(s)": "Wähle eine Karte um 1 Schweber zu entfernen",
+    "Select card to remove 3 Data(s)": "Wähle eine Karte um 3 Daten zu entfernen",
     "Select card to add microbe or animal": "Wähle eine Karte um Mikrobe oder Tier hinzuzufügen",
     "Add resource to card ${0}": "Füge eine Ressource den ${0} hinzu",
     "Add resource to card Decomposers": "Füge eine Ressource den Destruenten hinzu",
@@ -765,7 +773,10 @@
     "Remove asteroid": "Entferne Asteriod",
     "Turn this card face down and gain 3 TR": "Drehe diese Karte um und erhalte 3 TW",
     "Gain TR": "Erhalte TW",
-    "Raise the Venus scale 2 steps.": "Erhöhe die Venuswertung um 2.",
+    "Raise the Venus scale 2 steps.": "Erhöhe die Venuswertung um 4%.",
+    "Raise the temperature 2 steps": "Erhöhe die Temperatur um 4°C.",
+    "Raise the oxygen level 2 steps": "Erhöhe den Sauerstoffgehalt um 2%.",
+    "Raise the Venus scale level 2 steps": "Erhöhe die Venuswertung um 4%.",
     "Identify any 3 underground resources on Mars.": "Identifiziere 3 beliebige unterirdische Ressourcen auf dem Mars.",
     "Choose the order of tag resolution for Pharmacy Union": "Wähle die Reihenfolge der Symbol-Auflösung für Pharmazie Verband",
     "Turn it face down to gain 3 TR and lose up to 4 M€": "Drehe den Konzern um, erhalte 3 TW und verliere bis zu 4 M€.",
@@ -824,7 +835,7 @@
     "Spend 3 M€ to draw a blue card": "Bezahle 3 M€ um 1 blaue Karte zu ziehen",
     "Flip and discard a played blue card": "Dreh eine gespielte blaue Karte um und verwerfe sie",
     "Choose CEO card to play": "Wähle eine CEO-Karte um sie zu spielen",
-    "Remove 1 floater on this card to draw a card": "Entferne 1 Schweber von dieser Karte und ziehe eine Karte",
+    "Remove 1 floater on this card and draw a card": "Entferne 1 Schweber von dieser Karte und ziehe eine Karte",
     "Remove 1 floater on this card to trade for free": "Entferne 1 Schweber von dieser Karte, um kostenlos zu handeln",
     "Add 1 floater to a Jovian card": "Füge einer JUPITER-KARTE 1 Schweber hinzu",
     "Pay 1 floater (use ${0} action)": "Bezahle 1 Schweber (die Titan-Schweber-Startplattform Aktion nutzen)",
@@ -896,6 +907,7 @@
     "Add asteroid": "Füge Asteriod hinzu",
     "Do not move": "Bewege keinen",
     "Do not remove M€": "Entferne keine M€",
+    "Do not remove": "Entferne keine",
     "Don't remove M€ from adjacent player": "Entferne keine M€ vom angrenzenden Spieler",
     "Do not remove resource": "Entferne keine Ressourcen",
     "Skip removal": "Überspringe Entfernung",
@@ -1131,6 +1143,13 @@
     "Game Setup Details": "Spielaufbau Details",
 
     "Turmoil": "Aufruhr",
+    "Select an allied party": "Wähle eine verbündete Partei",
+    "[Mars First] - Bonus: Gain 1 M€ for each building tag you have - Policy: When you place a tile ON MARS, gain 1 steel": "[Mars First] - Bonus: Erhalte 1 M€ für jedes Gebäudesymbol, das du hast - Politik: Wenn du ein Plättchen auf dem MARS platzierst, erhältst du 1 Stahl.",
+    "[Scientists] - Bonus: Gain 1 M€ for each science tag you have - Policy: Pay 10 M€ to draw 3 cards (Turmoil Scientists)": "[Forschung] - Bonus: Erhalte 1 M€ für jede Wissenschaftssymbol, das du hast - Politik: Zahle 10 M€, um 3 Karten zu ziehen (Forschung in Aufruhr).",
+    "[Unity] - Bonus: Gain 1 M€ for each Venus, Earth and Jovian tag you have - Policy: Your titanium resoures are worth 1 M€ extra": "[Einheit] - Bonus: Erhalte 1 M€ für jedes Venus-, Erd- und Jupiter-Symbol, das du hast - Politik: Deine Titan-Ressourcen sind 1 M€ extra wert.",
+    "[Greens] - Bonus: Gain 1 M€ for each Plant, Microbe and Animal tag you have - Policy: When you place a greenery tile, gain 4 M€": "[Grün] - Bonus: 1 M€ für jedes Pflanzen-, Mikroben- und Tier-Symbol, das du hast - Politik: Wenn du ein Grünflächen-Plättchen legst, erhältst du 4 M€.",
+    "[Reds] - Bonus: The players(s) with the lowest TR gains 1 TR - Policy: When you take an action that raises TR, you MUST pay 3 M€ per step raised": "[Rot] - Bonus: Der/die Spieler mit dem niedrigsten TW erhält 1 TW - Politik: Wenn du eine Aktion ausführst, die den TW erhöht, MUSST du 3 M€ pro Schritt zahlen.",
+    "[Kelvinists] - Bonus: Gain 1 M€ for each heat production you have - Policy: Pay 10 M€ to increase your energy and heat production 1 step (Turmoil Kelvinists)": "[Kelvinisten] - Bonus: Du erhältst 1 M€ für jede Wärmeproduktion, die du hast - Politik: Zahle 10 M€, um deine Energie- und Wärmeproduktion um 1 zu erhöhen (Kelvinisten in Aufruhr).",
 
     "TR solo mode": "TW-Solo-Modus",
 
@@ -1220,6 +1239,8 @@
     "You will be limited to excavating a space that gives 1 energy production.": "Du kannst nur ein Feld ausgraben, der 1 Energieproduktion ergibt.",
     "There are not enough cards to complete this action. You will draw fewer cards than expected.": "Es gibt nicht genügend Karten, um diese Aktion durchzuführen. Du wirst weniger Karten ziehen als erwartet.",
     "Behavior in this card will apply to Double Down, and so have no effect.": "Das Verhalten auf dieser Karte gilt für Einsatz verdoppeln und hat daher keinen Effekt.",
+    "No cards gain the reward of this action.": "Diese Aktion belohnt keine Karten.",
+    "Lose 2 M€": "Verliere 2 M€",
 
     "Cards List": "Kartenliste",
     "legacy card UI": "Alte Kartenliste",
